--- a/hms-app/package.json
+++ b/hms-app/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "firebase": "^11.0.2",
+    "fs": "^0.0.1-security",
     "next": "15.0.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-toastify": "^10.0.6",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "eslint": "^8",
