--- a/hms-app/package.json
+++ b/hms-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "firebase": "^11.0.2",
+    "framer-motion": "^11.14.4",
     "fs": "^0.0.1-security",
     "next": "15.0.4",
     "react": "^19.0.0",
