--- a/hms-app/Pulse360/src/main/resources/application.properties
+++ b/hms-app/Pulse360/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=Pulse360
+spring.datasource.url=jdbc:mysql://localhost:3306/administrator
+spring.datasource.username=root
+spring.datasource.password=password
+
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
